--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <title>PUA 한글 조합 입력기</title>
   <style>
     @font-face {
-      font-family: 'MyPUAKorean';
-      src: url('./MyPUAKorean.woff2') format('woff2');
+      font-family: 'mememe';
+      src: url('./mememe.woff2') format('woff2');
     }
 
     body {
-      font-family: 'MyPUAKorean', sans-serif;
+      font-family: 'mememe', sans-serif;
       padding: 20px;
       line-height: 2;
     }
