--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>PUA 한글 조합 입력기</title>
+  <title>PUA 한글 조합 입력기1</title>
   <style>
     @font-face {
       font-family: 'mememe1';
