--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>PUA 한글 조합 입력기1</title>
+  <title>PUA 한글 조합 입력기2</title>
   <style>
     @font-face {
-      font-family: 'mememe1';
-      src: url('./mememe1.woff2') format('woff2');
+      font-family: 'mememe2';
+      src: url('./mememe2.otf') format('opentype');
     }
 
     body {
-      font-family: 'mememe1', sans-serif;
+      font-family: 'mememe2', sans-serif;
       padding: 20px;
       line-height: 2;
     }
@@ -36,7 +36,7 @@
   </style>
 </head>
 <body>
-  <h1>PUA 한글 조합 입력기</h1>
+  <h1>PUA 한글 조합 입력기2</h1>
 
   <h3>자음</h3>
   <div class="keyboard" id="jaum">
