--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>PUA 한글 조합 입력기</title>
+  <title>PUA 한글 조합 입력기 - 위치조정</title>
   <style>
     @font-face {
       font-family: 'mememe3';
@@ -29,42 +29,46 @@
 
     #output {
       border: 1px solid #ccc;
-      padding: 40px;
-      min-height: 200px;
+      padding: 20px;
+      min-height: 140px;
       font-size: 64px;
       display: flex;
       flex-wrap: wrap;
       align-items: center;
       justify-content: center;
+      font-family: 'mememe3', sans-serif;
     }
 
     .syllable {
       display: inline-block;
       position: relative;
       width: 80px;
-      height: 140px;
+      height: 100px;
       margin: 10px;
     }
 
     .base {
       position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
+      top: 30px;
+      left: 0;
+      right: 0;
+      text-align: center;
     }
 
     .top {
       position: absolute;
-      bottom: 100%;
-      left: 50%;
-      transform: translate(-50%, 0%);
+      top: 0;
+      left: 0;
+      right: 0;
+      text-align: center;
     }
 
     .bottom {
       position: absolute;
-      top: 100%;
-      left: 50%;
-      transform: translate(-50%, 0%);
+      bottom: 0;
+      left: 0;
+      right: 0;
+      text-align: center;
     }
   </style>
 </head>
@@ -73,26 +77,26 @@
 
   <h3>자음</h3>
   <div class="keyboard" id="jaum">
-    <button onclick="setBase('\ue000')">ㄱ</button>
-    <button onclick="setBase('\ue001')">ㄲ</button>
-    <button onclick="setBase('\ue002')">ㄴ</button>
-    <!-- ... 추가 자음 -->
+    <button onclick="addChar('\ue000', 'base')">ㄱ</button>
+    <button onclick="addChar('\ue001', 'base')">ㄲ</button>
+    <button onclick="addChar('\ue002', 'base')">ㄴ</button>
+    <!-- 필요시 더 추가 -->
   </div>
 
   <h3>모음</h3>
   <div class="keyboard" id="moum">
-    <button onclick="setTop('\ue020')">ㅏ</button>
-    <button onclick="setTop('\ue021')">ㅐ</button>
-    <button onclick="setTop('\ue022')">ㅑ</button>
-    <!-- ... 추가 모음 -->
+    <button onclick="addChar('\ue020', 'top')">ㅏ</button>
+    <button onclick="addChar('\ue021', 'top')">ㅐ</button>
+    <button onclick="addChar('\ue022', 'top')">ㅑ</button>
+    <!-- 필요시 더 추가 -->
   </div>
 
   <h3>받침</h3>
   <div class="keyboard" id="batchim">
-    <button onclick="setBottom('\ue040')">ㄱ</button>
-    <button onclick="setBottom('\ue041')">ㄲ</button>
-    <button onclick="setBottom('\ue042')">ㄳ</button>
-    <!-- ... 추가 받침 -->
+    <button onclick="addChar('\ue040', 'bottom')">ㄱ</button>
+    <button onclick="addChar('\ue041', 'bottom')">ㄲ</button>
+    <button onclick="addChar('\ue042', 'bottom')">ㄳ</button>
+    <!-- 필요시 더 추가 -->
   </div>
 
   <div style="margin-top: 20px;">
@@ -103,40 +107,25 @@
   <div id="output"></div>
 
   <script>
-    let current = { base: '', top: '', bottom: '' };
-    let syllables = [];
+    let currentSyllable = { base: '', top: '', bottom: '' };
+    let committed = [];
 
-    function setBase(c) {
-      current.base = c;
-      render();
-    }
-
-    function setTop(c) {
-      current.top = c;
-      render();
-    }
-
-    function setBottom(c) {
-      current.bottom = c;
+    function addChar(char, role) {
+      currentSyllable[role] = char;
       render();
     }
 
     function commitSyllable() {
-      syllables.push({ ...current });
-      current = { base: '', top: '', bottom: '' };
+      committed.push({ ...currentSyllable });
+      currentSyllable = { base: '', top: '', bottom: '' };
       render();
     }
 
     function backspace() {
-      if (current.bottom) {
-        current.bottom = '';
-      } else if (current.top) {
-        current.top = '';
-      } else if (current.base) {
-        current.base = '';
-      } else {
-        syllables.pop();
-      }
+      if (currentSyllable.bottom) currentSyllable.bottom = '';
+      else if (currentSyllable.top) currentSyllable.top = '';
+      else if (currentSyllable.base) currentSyllable.base = '';
+      else committed.pop();
       render();
     }
 
@@ -144,33 +133,33 @@
       const output = document.getElementById('output');
       output.innerHTML = '';
 
-      for (const s of [...syllables, current]) {
-        if (!s.base) continue;
+      [...committed, currentSyllable].forEach(syl => {
+        if (!syl.base) return; // base 없으면 안 보여줌
 
-        const span = document.createElement('span');
-        span.className = 'syllable';
+        const container = document.createElement('span');
+        container.className = 'syllable';
 
-        const base = document.createElement('div');
+        const base = document.createElement('span');
         base.className = 'base';
-        base.innerText = s.base;
-        span.appendChild(base);
+        base.textContent = syl.base;
+        container.appendChild(base);
 
-        if (s.top) {
-          const top = document.createElement('div');
+        if (syl.top) {
+          const top = document.createElement('span');
           top.className = 'top';
-          top.innerText = s.top;
-          span.appendChild(top);
+          top.textContent = syl.top;
+          container.appendChild(top);
         }
 
-        if (s.bottom) {
-          const bottom = document.createElement('div');
+        if (syl.bottom) {
+          const bottom = document.createElement('span');
           bottom.className = 'bottom';
-          bottom.innerText = s.bottom;
-          span.appendChild(bottom);
+          bottom.textContent = syl.bottom;
+          container.appendChild(bottom);
         }
 
-        output.appendChild(span);
-      }
+        output.appendChild(container);
+      });
     }
   </script>
 </body>
