--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>PUA 한글 조합 입력기 - 위치조정</title>
+  <title>PUA 한글 조합 입력기</title>
   <style>
     @font-face {
       font-family: 'mememe3';
@@ -29,46 +29,37 @@
 
     #output {
       border: 1px solid #ccc;
-      padding: 20px;
-      min-height: 140px;
-      font-size: 64px;
+      padding: 10px;
+      min-height: 120px;
+      font-size: 36px;
       display: flex;
       flex-wrap: wrap;
+      gap: 10px;
       align-items: center;
-      justify-content: center;
-      font-family: 'mememe3', sans-serif;
     }
 
     .syllable {
-      display: inline-block;
       position: relative;
       width: 80px;
       height: 100px;
-      margin: 10px;
     }
 
-    .base {
+    .syllable span {
       position: absolute;
-      top: 30px;
-      left: 0;
-      right: 0;
-      text-align: center;
+      left: 50%;
+      transform: translateX(-50%);
     }
 
-    .top {
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      text-align: center;
+    .jaum {
+      top: 40px;
     }
 
-    .bottom {
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      text-align: center;
+    .moum {
+      top: 0px;
+    }
+
+    .batchim {
+      top: 70px;
     }
   </style>
 </head>
@@ -77,26 +68,26 @@
 
   <h3>자음</h3>
   <div class="keyboard" id="jaum">
-    <button onclick="addChar('\ue000', 'base')">ㄱ</button>
-    <button onclick="addChar('\ue001', 'base')">ㄲ</button>
-    <button onclick="addChar('\ue002', 'base')">ㄴ</button>
-    <!-- 필요시 더 추가 -->
+    <button onclick="addChar('\ue000', 'jaum')">ㄱ</button>
+    <button onclick="addChar('\ue001', 'jaum')">ㄲ</button>
+    <button onclick="addChar('\ue002', 'jaum')">ㄴ</button>
+    <!-- ... -->
   </div>
 
   <h3>모음</h3>
   <div class="keyboard" id="moum">
-    <button onclick="addChar('\ue020', 'top')">ㅏ</button>
-    <button onclick="addChar('\ue021', 'top')">ㅐ</button>
-    <button onclick="addChar('\ue022', 'top')">ㅑ</button>
-    <!-- 필요시 더 추가 -->
+    <button onclick="addChar('\ue020', 'moum')">ㅏ</button>
+    <button onclick="addChar('\ue021', 'moum')">ㅐ</button>
+    <button onclick="addChar('\ue022', 'moum')">ㅑ</button>
+    <!-- ... -->
   </div>
 
   <h3>받침</h3>
   <div class="keyboard" id="batchim">
-    <button onclick="addChar('\ue040', 'bottom')">ㄱ</button>
-    <button onclick="addChar('\ue041', 'bottom')">ㄲ</button>
-    <button onclick="addChar('\ue042', 'bottom')">ㄳ</button>
-    <!-- 필요시 더 추가 -->
+    <button onclick="addChar('\ue040', 'batchim')">ㄱ</button>
+    <button onclick="addChar('\ue041', 'batchim')">ㄲ</button>
+    <button onclick="addChar('\ue042', 'batchim')">ㄳ</button>
+    <!-- ... -->
   </div>
 
   <div style="margin-top: 20px;">
@@ -107,59 +98,42 @@
   <div id="output"></div>
 
   <script>
-    let currentSyllable = { base: '', top: '', bottom: '' };
-    let committed = [];
+    let syllableBuffer = [];
 
-    function addChar(char, role) {
-      currentSyllable[role] = char;
+    function addChar(char, type) {
+      syllableBuffer.push({ char, type });
       render();
     }
 
     function commitSyllable() {
-      committed.push({ ...currentSyllable });
-      currentSyllable = { base: '', top: '', bottom: '' };
-      render();
+      if (syllableBuffer.length === 0) return;
+
+      const wrapper = document.createElement('div');
+      wrapper.className = 'syllable';
+
+      syllableBuffer.forEach(item => {
+        const span = document.createElement('span');
+        span.className = item.type;
+        span.innerText = item.char;
+        wrapper.appendChild(span);
+      });
+
+      document.getElementById('output').appendChild(wrapper);
+      syllableBuffer = [];
     }
 
     function backspace() {
-      if (currentSyllable.bottom) currentSyllable.bottom = '';
-      else if (currentSyllable.top) currentSyllable.top = '';
-      else if (currentSyllable.base) currentSyllable.base = '';
-      else committed.pop();
+      if (syllableBuffer.length > 0) {
+        syllableBuffer.pop();
+      } else {
+        const output = document.getElementById('output');
+        output.removeChild(output.lastChild);
+      }
       render();
     }
 
     function render() {
-      const output = document.getElementById('output');
-      output.innerHTML = '';
-
-      [...committed, currentSyllable].forEach(syl => {
-        if (!syl.base) return; // base 없으면 안 보여줌
-
-        const container = document.createElement('span');
-        container.className = 'syllable';
-
-        const base = document.createElement('span');
-        base.className = 'base';
-        base.textContent = syl.base;
-        container.appendChild(base);
-
-        if (syl.top) {
-          const top = document.createElement('span');
-          top.className = 'top';
-          top.textContent = syl.top;
-          container.appendChild(top);
-        }
-
-        if (syl.bottom) {
-          const bottom = document.createElement('span');
-          bottom.className = 'bottom';
-          bottom.textContent = syl.bottom;
-          container.appendChild(bottom);
-        }
-
-        output.appendChild(container);
-      });
+      // 임시 미리보기는 생략, 최종 입력만 표시
     }
   </script>
 </body>
