--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
 }
 
 .syllable .cho {
-  top: 50%; /* 자음은 중앙 */
+  top: 50%;
+  left: 48%;
+  transform: translate(-50%, -50%);
 }
 
 .syllable .jung {
