--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>PUA 한글 조합 입력기8</title>
+  <title>PUA 한글 조합 입력기</title>
   <style>
     @font-face {
       font-family: 'mememe3';
@@ -40,87 +40,79 @@
     }
 
     .syllable {
-  position: relative;
-  width: 70px;
-  height: 100px;
-  display: inline-block;
-}
+      position: relative;
+      width: 70px;
+      height: 100px;
+      display: inline-block;
+    }
 
-.syllable .char {
-  position: absolute;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
+    .syllable .char {
+      position: absolute;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
 
-.syllable .cho {
-  top: 50%;
-  left: 26%;
-  transform: translate(-50%, -50%);
-}
+    .syllable .cho {
+      top: 50%;
+      left: 26%;
+      transform: translate(-50%, -50%);
+    }
 
-.syllable .jung {
-  top: 20%; /* 모음은 위쪽 */
-}
+    .syllable .jung {
+      top: 20%;
+    }
 
-.syllable .jong {
-  top: 80%; /* 받침은 아래쪽 */
-}
+    .syllable .jong {
+      top: 80%;
+    }
+
+    #nativeInput {
+      font-size: 24px;
+      margin-bottom: 20px;
+      width: 100%;
+      padding: 10px;
+    }
   </style>
 </head>
 <body>
-  <h1>PUA 한글 조합 입력기8</h1>
+  <h1>PUA 한글 조합 입력기</h1>
 
-  <h3>자음</h3>
-  <div class="keyboard" id="jaum">
-    <button onclick="addChar('\ue000', 'cho')">ㄱ</button>
-    <button onclick="addChar('\ue001', 'cho')">ㄲ</button>
-    <button onclick="addChar('\ue002', 'cho')">ㄴ</button>
-    <!-- 나머지 자음 -->
-  </div>
-
-  <h3>모음</h3>
-  <div class="keyboard" id="moum">
-    <button onclick="addChar('\ue020', 'jung')">ㅏ</button>
-    <button onclick="addChar('\ue021', 'jung')">ㅐ</button>
-    <button onclick="addChar('\ue022', 'jung')">ㅑ</button>
-    <!-- 나머지 모음 -->
-  </div>
-
-  <h3>받침</h3>
-  <div class="keyboard" id="batchim">
-    <button onclick="addChar('\ue040', 'jong')">ㄱ</button>
-    <button onclick="addChar('\ue041', 'jong')">ㄲ</button>
-    <button onclick="addChar('\ue042', 'jong')">ㄳ</button>
-    <!-- 나머지 받침 -->
-  </div>
-
-  <div style="margin-top: 20px;">
-    <button onclick="commitSyllable()">완성 →</button>
-    <button onclick="backspace()">← 지우기</button>
-  </div>
+  <input type="text" id="nativeInput" placeholder="여기에 한글을 입력하세요" oninput="convertInput()">
 
   <div id="output" contenteditable="false"></div>
 
   <script>
-    let syllableBuffer = { cho: '', jung: '', jong: '' };
+    // 예시: 실제로 사용하는 PUA 코드와 맞춰서 수정하세요
+    const CHO_PUA = ['\ue000', '\ue001', '\ue002', '\ue003', '\ue004', '\ue005', '\ue006', '\ue007', '\ue008', '\ue009',
+                     '\ue00A', '\ue00B', '\ue00C', '\ue00D', '\ue00E', '\ue00F', '\ue010', '\ue011', '\ue012'];
+    const JUNG_PUA = ['\ue020', '\ue021', '\ue022', '\ue023', '\ue024', '\ue025', '\ue026', '\ue027', '\ue028', '\ue029',
+                      '\ue02A', '\ue02B', '\ue02C', '\ue02D', '\ue02E', '\ue02F', '\ue030', '\ue031', '\ue032', '\ue033', '\ue034'];
+    const JONG_PUA = ['', '\ue040', '\ue041', '\ue042', '\ue043', '\ue044', '\ue045', '\ue046', '\ue047', '\ue048',
+                      '\ue049', '\ue04A', '\ue04B', '\ue04C', '\ue04D', '\ue04E', '\ue04F', '\ue050', '\ue051', '\ue052',
+                      '\ue053', '\ue054', '\ue055', '\ue056', '\ue057', '\ue058', '\ue059', '\ue05A'];
+
     let syllables = [];
 
-    function addChar(char, type) {
-      syllableBuffer[type] = char;
-      render();
-    }
+    function convertInput() {
+      const input = document.getElementById('nativeInput').value;
+      syllables = [];
 
-    function commitSyllable() {
-      syllables.push({ ...syllableBuffer });
-      syllableBuffer = { cho: '', jung: '', jong: '' };
-      render();
-    }
+      for (let ch of input) {
+        const code = ch.charCodeAt(0);
+        if (code >= 0xAC00 && code <= 0xD7A3) {
+          const offset = code - 0xAC00;
+          const cho = Math.floor(offset / (21 * 28));
+          const jung = Math.floor((offset % (21 * 28)) / 28);
+          const jong = offset % 28;
 
-    function backspace() {
-      if (syllableBuffer.jong) syllableBuffer.jong = '';
-      else if (syllableBuffer.jung) syllableBuffer.jung = '';
-      else if (syllableBuffer.cho) syllableBuffer.cho = '';
-      else syllables.pop();
+          syllables.push({
+            cho: CHO_PUA[cho],
+            jung: JUNG_PUA[jung],
+            jong: JONG_PUA[jong]
+          });
+        }
+      }
+
       render();
     }
 
@@ -128,7 +120,7 @@
       const output = document.getElementById('output');
       output.innerHTML = '';
 
-      for (const s of [...syllables, syllableBuffer]) {
+      for (const s of syllables) {
         if (!(s.cho || s.jung || s.jong)) continue;
 
         const div = document.createElement('div');
