--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>PUA 한글 조합 입력기8</title>
+  <title>PUA 한글 조합 입력기</title>
   <style>
     @font-face {
       font-family: 'mememe3';
@@ -15,16 +15,11 @@
       line-height: 2;
     }
 
-    .keyboard {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 8px;
+    #nativeInput {
+      font-size: 24px;
       margin-bottom: 20px;
-    }
-
-    button {
-      padding: 10px 14px;
-      font-size: 18px;
+      width: 100%;
+      padding: 10px;
     }
 
     #output {
@@ -59,85 +54,91 @@
     }
 
     .syllable .jung {
-      top: 20%; /* 모음은 위쪽 */
+      top: 20%;
     }
 
     .syllable .jong {
-      top: 80%; /* 받침은 아래쪽 */
+      top: 80%;
     }
 
-    .non-hangul {
-      margin-right: -5px; /* 한글이 아닌 문자 간격 좁히기 */
+    .plain-char {
+      width: 50px;  /* 좁은 간격 설정 */
+      height: 100px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 24px;  /* 기본 크기 설정 */
     }
   </style>
 </head>
 <body>
-  <h1>PUA 한글 조합 입력기8</h1>
+  <h1>PUA 한글 조합 입력기</h1>
 
-  <h3>자음</h3>
-  <div class="keyboard" id="jaum">
-    <button onclick="addChar('\ue000', 'cho')">ㄱ</button>
-    <button onclick="addChar('\ue001', 'cho')">ㄲ</button>
-    <button onclick="addChar('\ue002', 'cho')">ㄴ</button>
-    <!-- 나머지 자음 -->
-  </div>
-
-  <h3>모음</h3>
-  <div class="keyboard" id="moum">
-    <button onclick="addChar('\ue020', 'jung')">ㅏ</button>
-    <button onclick="addChar('\ue021', 'jung')">ㅐ</button>
-    <button onclick="addChar('\ue022', 'jung')">ㅑ</button>
-    <!-- 나머지 모음 -->
-  </div>
-
-  <h3>받침</h3>
-  <div class="keyboard" id="batchim">
-    <button onclick="addChar('\ue040', 'jong')">ㄱ</button>
-    <button onclick="addChar('\ue041', 'jong')">ㄲ</button>
-    <button onclick="addChar('\ue042', 'jong')">ㄳ</button>
-    <!-- 나머지 받침 -->
-  </div>
-
-  <div style="margin-top: 20px;">
-    <button onclick="commitSyllable()">완성 →</button>
-    <button onclick="backspace()">← 지우기</button>
-  </div>
+  <input type="text" id="nativeInput" placeholder="한글, 영어, 기호 등을 입력하세요" oninput="convertInput()">
 
   <div id="output" contenteditable="false"></div>
 
   <script>
-    // 겹받침 단독 입력 처리
+    const CHO_PUA = ['\ue000', '\ue001', '\ue002', '\ue003', '\ue004', '\ue005', '\ue006', '\ue007', '\ue008', '\ue009',
+                     '\ue00A', '\ue00B', '\ue00C', '\ue00D', '\ue00E', '\ue00F', '\ue010', '\ue011', '\ue012'];
+    const JUNG_PUA = ['\ue020', '\ue021', '\ue022', '\ue023', '\ue024', '\ue025', '\ue026', '\ue027', '\ue028', '\ue029',
+                      '\ue02A', '\ue02B', '\ue02C', '\ue02D', '\ue02E', '\ue02F', '\ue030', '\ue031', '\ue032', '\ue033', '\ue034'];
+    const JONG_PUA = ['', '\ue040', '\ue041', '\ue042', '\ue043', '\ue044', '\ue045', '\ue046', '\ue047', '\ue048',
+                      '\ue049', '\ue04A', '\ue04B', '\ue04C', '\ue04D', '\ue04E', '\ue04F', '\ue050', '\ue051', '\ue052',
+                      '\ue053', '\ue054', '\ue055', '\ue056', '\ue057', '\ue058', '\ue059', '\ue05A'];
+
+    // 유니코드 자음/모음 -> 인덱스 매핑 (단독용)
+    const CHOSEONG_UNI = [0x3131, 0x3132, 0x3134, 0x3137, 0x3138, 0x3139, 0x3141, 0x3142, 0x3143, 0x3145,
+                          0x3146, 0x3147, 0x3148, 0x3149, 0x314a, 0x314b, 0x314c, 0x314d, 0x314e];
+    const JUNGSEONG_UNI = [0x314f, 0x3150, 0x3151, 0x3152, 0x3153, 0x3154, 0x3155, 0x3156, 0x3157, 0x3158,
+                           0x3159, 0x315a, 0x315b, 0x315c, 0x315d, 0x315e, 0x315f, 0x3160, 0x3161, 0x3162, 0x3163];
+
+    // 겹받침 매핑
     const COMPLEX_JONG_MAP = {
-      'ㄱ': '\ue040', 'ㄲ': '\ue041', 'ㄳ': '\ue042', 'ㄴ': '\ue043', 'ㄵ': '\ue044', 'ㄶ': '\ue045',
-      'ㄷ': '\ue046', 'ㄹ': '\ue047', 'ㄺ': '\ue048', 'ㄻ': '\ue049', 'ㄼ': '\ue04a', 'ㄽ': '\ue04b',
-      'ㄾ': '\ue04c', 'ㄿ': '\ue04d', 'ㅀ': '\ue04e', 'ㅁ': '\ue04f', 'ㅂ': '\ue050', 'ㅄ': '\ue051',
-      'ㅅ': '\ue052', 'ㅆ': '\ue053', 'ㅇ': '\ue054', 'ㅈ': '\ue055', 'ㅊ': '\ue056', 'ㅋ': '\ue057',
-      'ㅌ': '\ue058', 'ㅍ': '\ue059', 'ㅎ': '\ue05a'
+      'ㄱ': 1, 'ㄲ': 2, 'ㄳ': 3, 'ㄴ': 4, 'ㄵ': 5, 'ㄶ': 6, 'ㄷ': 7,
+      'ㄹ': 8, 'ㄺ': 9, 'ㄻ': 10, 'ㄼ': 11, 'ㄽ': 12, 'ㄾ': 13, 'ㄿ': 14, 'ㅀ': 15,
+      'ㅁ': 16, 'ㅂ': 17, 'ㅄ': 18, 'ㅅ': 19, 'ㅆ': 20, 'ㅇ': 21, 'ㅈ': 22,
+      'ㅊ': 23, 'ㅋ': 24, 'ㅌ': 25, 'ㅍ': 26, 'ㅎ': 27
     };
 
-    let syllableBuffer = { cho: '', jung: '', jong: '' };
     let syllables = [];
 
-    function addChar(char, type) {
-      // 겹받침이 단독으로 입력되면 PUA로 변환
-      if (type === 'jong' && COMPLEX_JONG_MAP[char]) {
-        char = COMPLEX_JONG_MAP[char];
+    function convertInput() {
+      const input = document.getElementById('nativeInput').value;
+      syllables = [];
+
+      for (let ch of input) {
+        const code = ch.charCodeAt(0);
+
+        if (code >= 0xAC00 && code <= 0xD7A3) {
+          // 완성형 한글
+          const offset = code - 0xAC00;
+          const cho = Math.floor(offset / (21 * 28));
+          const jung = Math.floor((offset % (21 * 28)) / 28);
+          const jong = offset % 28;
+
+          syllables.push({
+            cho: CHO_PUA[cho],
+            jung: JUNG_PUA[jung],
+            jong: JONG_PUA[jong]
+          });
+        } else if (CHOSEONG_UNI.includes(code)) {
+          // 단독 자음
+          const idx = CHOSEONG_UNI.indexOf(code);
+          syllables.push({ cho: CHO_PUA[idx] });
+        } else if (JUNGSEONG_UNI.includes(code)) {
+          // 단독 모음
+          const idx = JUNGSEONG_UNI.indexOf(code);
+          syllables.push({ jung: JUNG_PUA[idx] });
+        } else if (COMPLEX_JONG_MAP[ch]) {
+          // 겹받침
+          syllables.push({ jong: JONG_PUA[COMPLEX_JONG_MAP[ch]] });
+        } else {
+          // 일반 문자
+          syllables.push({ raw: ch });
+        }
       }
-      syllableBuffer[type] = char;
-      render();
-    }
 
-    function commitSyllable() {
-      syllables.push({ ...syllableBuffer });
-      syllableBuffer = { cho: '', jung: '', jong: '' };
-      render();
-    }
-
-    function backspace() {
-      if (syllableBuffer.jong) syllableBuffer.jong = '';
-      else if (syllableBuffer.jung) syllableBuffer.jung = '';
-      else if (syllableBuffer.cho) syllableBuffer.cho = '';
-      else syllables.pop();
       render();
     }
 
@@ -145,13 +146,18 @@
       const output = document.getElementById('output');
       output.innerHTML = '';
 
-      for (const s of [...syllables, syllableBuffer]) {
-        if (!(s.cho || s.jung || s.jong)) continue;
+      for (const s of syllables) {
+        if (s.raw) {
+          const div = document.createElement('div');
+          div.className = 'plain-char';
+          div.innerText = s.raw;
+          output.appendChild(div);
+          continue;
+        }
 
         const div = document.createElement('div');
         div.className = 'syllable';
 
-        // 모음, 자음, 받침 처리
         if (s.jung) {
           const jung = document.createElement('span');
           jung.className = 'char jung';
@@ -176,41 +182,6 @@
         output.appendChild(div);
       }
     }
-
-    // 한글이 아닌 글자 처리
-    function handleInput(event) {
-      let inputText = event.target.value;
-      let outputText = '';
-
-      for (let char of inputText) {
-        if (/[\uAC00-\uD7A3]/.test(char)) {
-          outputText += convertToPUA(char); // 한글이면 PUA로 변환
-        } else {
-          outputText += `<span class="non-hangul">${char}</span>`; // 한글이 아닌 문자는 간격 좁혀서 출력
-        }
-      }
-
-      document.getElementById('output').innerHTML = outputText;
-    }
-
-    function convertToPUA(char) {
-      // 한글을 PUA로 변환하는 로직 (자음, 모음, 받침 별로 처리)
-      const baseCode = char.charCodeAt(0) - 0xAC00;
-      const cho = Math.floor(baseCode / (21 * 28));
-      const jung = Math.floor((baseCode % (21 * 28)) / 28);
-      const jong = baseCode % 28;
-
-      return (
-        `<span class="syllable">
-          <span class="char cho">${cho ? String.fromCharCode(0xE000 + cho) : ''}</span>
-          <span class="char jung">${jung ? String.fromCharCode(0xE020 + jung) : ''}</span>
-          <span class="char jong">${jong ? String.fromCharCode(0xE040 + jong) : ''}</span>
-        </span>`
-      );
-    }
-
-    document.querySelector('input[type="text"]').addEventListener('input', handleInput);
-
   </script>
 </body>
 </html>
