--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 /* 모바일 화면일 경우 (최대 너비 768px 이하) */
 @media (max-width: 768px) {
   .syllable .cho {
-    top: 50%
+    top: 50%;
     left: 50%;
   }
 }
