--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>PUA 한글 조합 입력기</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>PUA 한글 조합 입력기1.0</title>
   <style>
     @font-face {
       font-family: 'mememe3';
@@ -79,7 +80,7 @@
   </style>
 </head>
 <body>
-  <h1>PUA 한글 조합 입력기</h1>
+  <h1>PUA 한글 조합 입력기1.0</h1>
 
   <input type="text" id="nativeInput" placeholder="한글, 영어, 기호 등을 입력하세요" oninput="convertInput()">
 
