--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 }
 
 /* 모바일 화면일 경우 (최대 너비 768px 이하) */
-@media (max-width: 1024px) {
+@media (hover: none) and (pointer: coarse) {
   .syllable .cho {
     top: 50%;
     left: 50%;
