--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PUA 한글 조합 입력기1.5</title>
+  <title>PUA 한글 조합 입력기1.6</title>
   <style>
     @font-face {
       font-family: 'mememe3';
@@ -80,7 +80,7 @@
   </style>
 </head>
 <body>
-  <h1>PUA 한글 조합 입력기1.5</h1>
+  <h1>PUA 한글 조합 입력기1.6</h1>
 
   <input type="text" id="nativeInput" placeholder="한글, 영어, 기호 등을 입력하세요" oninput="convertInput()">
 
@@ -173,14 +173,16 @@ function toggleInput() {
   if (input.style.opacity === '0') {
     input.style.opacity = '1';
     input.style.position = 'static';
+    input.focus();
     btn.innerText = '입력창 숨기기';
   } else {
     input.style.opacity = '0';
     input.style.position = 'absolute';
+    input.style.left = '-9999px';  // 완전히 화면에서 벗어나게
+    input.focus(); // 이거 꼭 필요!
     btn.innerText = '입력창 보이기';
   }
 }
-
 
 
     function convertInput() {
