--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>황도어 입력기1.8</title>
+  <title>황도어 입력기2.0</title>
   <style>
     @font-face {
-      font-family: 'mememe3';
-      src: url('./mememe3.otf') format('opentype');
+      font-family: 'mememe3.1';
+      src: url('./mememe3.1.otf') format('opentype');
     }
 
     body {
-      font-family: 'mememe3', sans-serif;
+      font-family: 'mememe3.1', sans-serif;
       padding: 20px;
       line-height: 2;
     }
@@ -121,7 +121,7 @@
 
     function copyForKakao() {
   const MAX_COL = 10;
-  const blank = '\u2800'; // 크기 맞는 빈 문자
+  const blank = '\ue060'; // 크기 맞는 빈 문자
   const blocks = [];
 
   let lines = [[], [], []];
